[project]
name = "ComfyUI-Qwen-VL"
description = "A ComfyUI extension for Qwen-VL series large language models, supporting multi-modal functions such as text generation, image understanding, and video analysis.Support for Qwen2-VL, Qwen2.5-VL."
version = "0.1.3"
license = {file = "LICENSE"}
dependencies = ["accelerate>=1.0", "bitsandbytes", "huggingface-hub>=0.26.2", "numpy", "pillow>=9.4.0", "qwen-vl-utils", "torch>=2.0.1", "torchvision>=0.15.2", "transformers>=4.46", "modelscope", "Requests"]

[project.urls]
Repository = "https://github.com/SXQBW/ComfyUI-Qwen-VL"

[tool.comfy]
PublisherId = "sxqbw"
DisplayName = "ComfyUI-Qwen-VL"
Icon = ""
